# Enigma

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  todo.md  tox.ini
.github/workflows/: tests.yaml
app/: __init__.py  main.py  reflector.py  rotor.py
data/: Rotors.enigma  cipher.txt  plain.txt  rotors.enigma
src/enigma/: __init__.py  main.py  plugboard.py  reflector.py  rotor.py
tests/: test_reflector.py
