[metadata]
name = enigma
version = 1.0
author = Benyamin Mahmoudyan
author_email = benyaminmahmoudyan@gmail.com
description = Nazi encription machine
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude =
    src.tests

